encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/plaintext_output.stderr
error: encrypt_fn_graph outputs must be encrypted types, not plaintext (`PUint64`)
 --> tests/compile_fail/plaintext_output.rs:8:35
  |
8 | fn bad(a: EUint64, b: PUint64) -> PUint64 {
  |                                   ^^^^^^^
